Fixed large gaps error.

--- a/styles/default.css
+++ b/styles/default.css
@@ -391,7 +391,7 @@ td.havemiss, th.havemiss {
 }
 
 .gamecomments td {
-	width: 300px;
+	width: 500px;
 }
 
 #owners a {
